refs #32261